# OOP-lab4

./: CMakeLists.txt
include/: figure.h  hexagon.h  pentagon.h  rhombus.h
src/: hexagon.cpp  main.cpp  pentagon.cpp  rhombus.cpp
test/: test.cpp
